--- a/index.html
+++ b/index.html
@@ -6,27 +6,87 @@
     <title>instgram</title>
 </head>
 <body>
-    <!-- <br>태그는 줄바꿈 기능이 있다.-->
-    <!-- <p>태그는 문단을 나누는 태그 paragraph의 약자이다.
-        p태그는 줄바꿈을 표현하는 block이라는 속성이 있기 때문에
-        옆에 글이 올 수 없다.-->
-    <h2>half_bottle</h2>
-    <p>프로필 편집</p>
-    <p>
-        <!-- <strong> 볼드체 표현-->
-        <strong>
-            반병현(Bynghyun Ban)<br>
-        </strong>
-        작가
-    </p>
-    <p>needleworm.github.io</p>
-    <p>
-        게시물<br/>
-        팔로워<br/>
-        팔로우<br/>
-        133<br/>
-        408<br/>
-        189<br/>
-    </p>
+    <img src="image/instagramlogo.png" width="150px">
+    <input type="search" value="검색">
+    <div>
+        <img src="image/profile.jpg" width="50px">
+        <!-- <br>태그는 줄바꿈 기능이 있다.-->
+        <!-- <p>태그는 문단을 나누는 태그 paragraph의 약자이다.
+            p태그는 줄바꿈을 표현하는 block이라는 속성이 있기 때문에
+            옆에 글이 올 수 없다.-->
+        <div>
+            <h2>half_bottle</h2>
+            <button>프로필 편집</button>
+        </div>
+    </div>
+    <!--회색 버튼이 생긴다.
+    CSS를 공부하면 버튼의 크기와 색상, 모양을 여러분의 취향대로
+    수정할 수 있다.-->
+    <div>
+        <p>
+            <!-- <strong> 볼드체 표현-->
+            <strong>
+                반병현(Bynghyun Ban)<br>
+            </strong>
+            작가
+        </p>
+        <p>
+            <a href="https://needleworm.github.io">
+                needleworm.github.io
+            </a>    
+        </p>
+    </div>
+
+    <div>
+        <!-- 높이 35px로 하이라이트 이미지 2개 넣기-->
+        <div>
+            <img src="image/hl 1.jpg" height="35px">
+        </div>
+        <div>
+            <!-- window + ; -->
+            😎
+        </div>
+        <div>
+            <img src="image/hl 2.jpg" height="35px">
+        </div>
+        <div>
+            <!-- window + ; -->
+            😊
+        </div>
+    </div>
+    <div>
+        <p>
+            <div>
+                게시물<br/>
+                133
+            </div>
+            <div>
+                팔로워<br/>
+                408
+            </div>
+            <div>
+                팔로우<br/>
+                189
+            </div>
+        </p>
+    </div>
+    <div>아이콘이 들어갈 자리</div>
+    <div>
+        <!-- 퍼센트(%)로 지정된 값은 화면 크기에 따라
+         이미지의 크기가 바뀐다.
+         이처럼 창 크기의 변화에 맞춰 화면의 정보나 사진의 크기가
+         바뀌는 웹 페이지를 반응형 웹이라고 한다.
+         모든 웹 페이지 외주 제작에서 반응형 웹이 가장 비산 가격으로
+         거래되고 있다. 가장 수요가 높고 난이도가 높기 때문이다.-->
+        <img src="image/thumbnails/1.jpg" width="32%">
+        <img src="image/thumbnails/2.jpg" width="32%">
+        <img src="image/thumbnails/3.jpg" width="32%">
+        <img src="image/thumbnails/4.jpg" width="32%">
+        <img src="image/thumbnails/5.jpg" width="32%">
+        <img src="image/thumbnails/6.jpg" width="32%">
+        <img src="image/thumbnails/7.jpg" width="32%">
+        <img src="image/thumbnails/8.jpg" width="32%">
+        <img src="image/thumbnails/9.jpg" width="32%">
+    </div>
 </body>
 </html>
