인스타그램페이지 완성

--- a/8_1_12.html
+++ b/8_1_12.html
@@ -1,8 +1,10 @@
 <style>
     p{
+        border : 1px solid red;
         background-image:url("image/profile.jpg");
-        background-position-x : 200px;
-        background-position-y : -200px;
+        background-position-x : 150px;
+        background-position-y : -50px;
+        background-repeat: no-repeat;
     }
 </style>
 
