--- a/8_2_3.html
+++ b/8_2_3.html
@@ -19,8 +19,8 @@
     }
 </style>
 <div class="myGrid">
-1번 영역
-2번 영역
+    <div id="first">1번 영역</div>
+    <div id="second">2번 영역</div>
     <div id="third">3번 영역</div>
     <div id="fourth">4번 영역</div>
 </div>
