인스타그램 자바스크립트작성

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>instgram</title>
         <link href="style.css" rel="stylesheet">
         <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet"/>
+        <script src="script.js"></script>
     </head>
     <body>
         <div id="top">
@@ -32,7 +33,8 @@
                 옆에 글이 올 수 없다.-->
             <div id="profile_info">
                 <div id="id">
-                    half_bottle <i class="fas fa-cog"></i>
+                    <span>half_bottle</span>
+                    <i class="fas fa-cog"></i>
                 </div>
                 <button>프로필 편집</button>
             </div>
@@ -44,12 +46,12 @@
         <div>
             <p>
                 <!-- <strong> 볼드체 표현-->
-                <strong>
+                <strong id="userInfo">
                     반병현(Bynghyun Ban)<br>
                 </strong>
-                작가
+                <span id="summary">작가</span>
             </p>
-            <p>
+            <p id="profileDetail">
                 <a href="https://needleworm.github.io">
                     needleworm.github.io
                 </a>    
